# chenson-backend

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  run.sh
.github/workflows/: deploy.yml
app/: dependencies.py  permissions.py  uow.py
app/address/: models.py  repository.py  router.py  schemas.py  service.py
app/admin/: auth.py  models.py  repository.py  router.py  schemas.py  service.py
app/bot/: dependencies.py  handlers.py
app/category/: models.py  repository.py  router.py  schemas.py  service.py
app/order/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
app/product/: filters.py  mapper.py  models.py  repository.py  router.py  schemas.py  service.py
app/user/: dependencies.py  mapper.py  models.py  repository.py  router.py  routes.py  schemas.py  service.py  uow.py  utils.py
app/utils/: images.py
core/: config.py  dispatcher.py  events.py  fixture.py  fixtures.py  middleware.py  routers.py
core/config/: __init__.py  _main.py  swagger.py
core/database/: db.py  mixins.py
core/exceptions/: classes.py  handlers.py
core/logging/: log_scheme.py  logger.py  logging.py
core/repositories/: base.py
core/schemas/: base.py
core/services/: auth.py  uow.py
migrations/: env.py  models.py
migrations/versions/: 298618e79eb7_add_ondelete.py  36dc344701d3_add_orders_user_id_index.py  52d173aba8bb_add_indexes_to_models.py  7ff7196563a0_initial_migrations.py  d0ea33e443af_initial_migrations.py
tests/: conftest.py  fixtures.py  utils.py
(+34 files in other folders)
