[tool.poetry]
name = "chenson-backend"
version = "0.1.0"
description = ""
authors = ["Anvar Khamidov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
aiogram = "^3.2.0"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
loguru = "^0.7.2"
pyjwt = "^2.8.0"
httpx = "^0.25.2"
faker = "^20.1.0"
passlib = "^1.7.4"
greenlet = "^3.0.1"
pytz = "^2023.3.post1"
stackprinter = "^0.2.11"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.0"
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
